# das-pay

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  app.toml  clippy.toml  sample_input.csv  sample_output.csv
benches/: bench.rs
journal/: book.toml
journal/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
journal/src/: 2022.md  SUMMARY.md
src/: lib.rs  main.rs  opt.rs
src/cli/: mod.rs  opt.rs
src/models/: account.rs  mod.rs  trans.rs  transaction.rs
tests/: integration_test.rs
